stars z-index fixed.

--- a/public/css/backoffice.css
+++ b/public/css/backoffice.css
@@ -45,7 +45,7 @@ body {
   position:absolute;
   bottom: 0px;
   width: 100%;
-  z-index: 10000;
+  z-index: 10;
   text-align: center;
 }
 
